crates/ink/tests/ui/contract/fail/constructor-async.stderr
error: ink! constructors must not be async
 --> tests/ui/contract/fail/constructor-async.rs:8:13
  |
8 |         pub async fn constructor() -> Self {
  |             ^^^^^
